# vSID

./: .gitignore  CMakeLists.txt  CMakePresets.json  Changelog.txt  LICENSE  LICENSE.md  README.md  Resource.h  airport.h  area.cpp  area.h  configparser.cpp  configparser.h  constants.h  flightplan.cpp  flightplan.h  framework.h  messageHandler.cpp  messageHandler.h  sid.cpp  sid.h  time.cpp  time.h  timeHandler.cpp  timeHandler.h  utils.cpp  utils.h  vSID.cpp  vSID.def  vSID.h  vSID.rc  vSID.sln  vSID.vcxproj  vSID.vcxproj.filters  vSIDPlugin.cpp  vSIDPlugin.h  vSidConfig.json
.github/: CODEOWNER
.github/workflows/: build.yml  issue_project_automation.yml
config/: edah.json  eddb.json  eddc.json  edde.json  eddf.json  eddg.json  eddh.json  eddk.json  eddl.json  eddm.json  eddn.json  eddp.json  eddr.json  edds.json  eddv.json  eddw.json  edfh.json  edfm.json  edgg_mil.json  edgg_rmz.json  edhi.json  edhl.json  edja.json  edln.json  edlp.json  edlv.json  edlw.json  edma.json  edmm_rmz.json  edmo.json  edny.json  edqm.json  edsb.json  edtl.json  edve.json  edvk.json  edww_rmz.json  edxw.json  lszh.json
es_environment/: EuroScopePlugIn.h
res/: vSID.rc2
